--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,13 @@ body {
     color: #ffffff;
 
     background:
-        linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url("images/Money.webp");
+        linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-/* General text styling */
 li {
     font-size: 14px;
     font-style: italic;
@@ -23,28 +21,24 @@ a {
     color: rgb(88, 143, 255);
 }
 
-/* Left column */
 .leftvalue {
     float: left;
     width: 20%;
     padding: 10px;
 }
 
-/* Center column */
 .mainbody {
     float: left;
     width: 55%;
     padding: 10px;
 }
 
-/* Right column */
 .rightvalue {
     float: right;
     width: 20%;
     padding: 10px;
 }
 
-/* Clear floats */
 body::after {
     content: "";
     display: block;
